# lightdash-client-python

./: .pre-commit-config.yaml  .pylintrc  Makefile  README.md  pyproject.toml  ruff.toml  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: publish.yml  test-publish.yml  test.yml
.openapi-generator/: FILES
dev/: dereference_swagger_json.sh  download_swagger_json.sh  generate_clients.sh  generate_openapi_schema.py  lint.sh  lint_python.sh  openapi-python-client.yml
dev/schemas/: README.md  dereferenced-swagger.json  download.sh  openapibundle.json  rebuilt-swagger.json
docker/swagger-cli/: Dockerfile  README.md
docs/models/: ChartConfig.md  CreateDashboard.md  CreateDashboardTile.md  CreateInviteLink.md  CreatePersonalAccessToken.md  CreateSavedChart.md  CreateSavedChartVersion.md  CreateUser.md  Dashboard.md  DashboardFilterRule.md  DashboardFilters.md  DashboardListItem.md  DashboardTile.md  Error.md  Field.md  Fields.md  InviteLink.md  Job.md  LightdashUser.md  Login.md  LoomTileProperties.md  MarkdownTileProperties.md  OrganizationUser.md  PersonalAccessToken.md  PersonalAccessTokenWithSecret.md  Project.md  ProjectCatalog.md  ProjectTablesConfiguration.md  QueryResult.md  SavedChart.md  Step.md  Success.md  TilePropertiesChart.md  UpdateDashboard.md  UpdateMultipleSavedChart.md  UpdateSavedChart.md  UpdatedByUser.md
examples/: .env.example  README.md  get_my_organization.py
lightdash_client/: __init__.py  api_client.py  client.py  configuration.py  exceptions.py  rest.py  schemas.py  types.py
lightdash_client/apis/: path_to_api.py  tag_to_api.py
lightdash_client/model/: __init__.py  chart_config.py  chart_config.pyi  create_dashboard.py  create_dashboard.pyi  create_dashboard_tile.py  create_dashboard_tile.pyi  create_invite_link.py  create_invite_link.pyi  create_personal_access_token.py  create_personal_access_token.pyi  create_saved_chart.py  create_saved_chart.pyi  create_user.py  (+61 more)
tests/: test_dummy.py
(+3053 files in other folders)
